--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-
 # non cachare i template e rigenerare l'html ad ogni modifica
 spring.thymeleaf.cache=false
 # See sql queries
@@ -7,7 +6,7 @@ spring.jpa.properties.hibernate.format_sql=true
 #data source
 spring.datasource.url=jdbc:mysql://localhost:3306/foto-portfolio
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=root
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto=create
 #DATE TIME FORMATTING
